--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Etch a Sketch</title>
+    <title>Etch A Sketch</title>
 </head>
 
 <body>
-    <div class="container"></div>
+    <h1>Etch A Sketch</h1>
+    <div class="container">
+        <div class="grid"></div>
+    </div>
 </body>
 
 <script src="./scripts/main.js"></script>
