Added styles and options
Added new styles to the page as well as buttons to change its function.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 <body>
     <h1>Etch A Sketch</h1>
     <div class="container">
+        <div class="options">
+            <button class="option" id="clear">Clear</button>
+            <button class="option" id="change">Change Color</button>
+            <span class="current"></span>
+        </div>
         <div class="grid"></div>
     </div>
+    <div class="footer">Made by DarkRhyfel</div>
 </body>
 
 <script src="./scripts/main.js"></script>
