Add function to change drawing color.
Added a function to switch between black and a random rgb color for drawing.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="options">
             <button class="option" id="clear">Clear</button>
             <button class="option" id="change">Change Color</button>
-            <span class="current"></span>
+            <span class="current black"></span>
         </div>
         <div class="grid"></div>
     </div>
